CHORE spacing to uses vmin instead of vh, FIX primary theme

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    @apply [--font-blank-space:.25em] [--max-h:calc(var(--max-w)/1.778)] [--max-w:theme(screens.2xl)] [--spacing-lg:calc(var(--spacing-md)*2)] [--spacing-md:clamp(theme(spacing.7),14vh,theme(spacing.14))] [--spacing-sm:calc(var(--spacing-md)/2)] [--spacing-xl:calc(var(--spacing-md)*4)] [--spacing-xs:calc(var(--spacing-md)/4)];
+    @apply [--font-blank-space:.25em] [--max-h:calc(var(--max-w)/1.778)] [--max-w:theme(screens.2xl)] [--spacing-lg:calc(var(--spacing-md)*2)] [--spacing-md:clamp(theme(spacing.7),14vmin,theme(spacing.14))] [--spacing-sm:calc(var(--spacing-md)/2)] [--spacing-xl:calc(var(--spacing-md)*4)] [--spacing-xs:calc(var(--spacing-md)/4)];
 
     --info: 199 77% 54%;
     --info-a: 199 77% 50%;
@@ -61,7 +61,7 @@
     --border: 0 0% 90%;
   }
 
-  .light > .primary {
+  .light .primary {
     @apply text-content;
 
     --main: 0 0% 4.7%;
@@ -117,7 +117,7 @@
     --border: 0 0% 12%;
   }
 
-  .dark > .primary {
+  .dark:not(:has(.light)) .primary {
     @apply text-content;
 
     --main: 0 0% 98%;
